// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`eslint-react > eslint-react 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "env": {
          "es2020": true,
        },
        "files": [
          "**/*.{js,jsx}",
        ],
        "plugins": [
          "react",
        ],
        "rules": {
          "constructor-super": "error",
          "for-direction": "error",
          "getter-return": "error",
          "no-async-promise-executor": "error",
          "no-case-declarations": "error",
          "no-class-assign": "error",
          "no-compare-neg-zero": "error",
          "no-cond-assign": "error",
          "no-const-assign": "error",
          "no-constant-binary-expression": "error",
          "no-constant-condition": "error",
          "no-control-regex": "error",
          "no-debugger": "error",
          "no-delete-var": "error",
          "no-dupe-class-members": "error",
          "no-dupe-else-if": "error",
          "no-dupe-keys": "error",
          "no-duplicate-case": "error",
          "no-empty": "error",
          "no-empty-character-class": "error",
          "no-empty-pattern": "error",
          "no-empty-static-block": "error",
          "no-ex-assign": "error",
          "no-extra-boolean-cast": "error",
          "no-fallthrough": "error",
          "no-func-assign": "error",
          "no-global-assign": "error",
          "no-import-assign": "error",
          "no-invalid-regexp": "error",
          "no-irregular-whitespace": "error",
          "no-loss-of-precision": "error",
          "no-misleading-character-class": "error",
          "no-new-native-nonconstructor": "error",
          "no-nonoctal-decimal-escape": "error",
          "no-obj-calls": "error",
          "no-prototype-builtins": "error",
          "no-redeclare": "error",
          "no-regex-spaces": "error",
          "no-self-assign": "error",
          "no-setter-return": "error",
          "no-shadow-restricted-names": "error",
          "no-sparse-arrays": "error",
          "no-this-before-super": "error",
          "no-unassigned-vars": "error",
          "no-unexpected-multiline": "error",
          "no-unreachable": "error",
          "no-unsafe-finally": "error",
          "no-unsafe-negation": "error",
          "no-unsafe-optional-chaining": "error",
          "no-unused-labels": "error",
          "no-unused-private-class-members": "error",
          "no-unused-vars": [
            "error",
            {
              "varsIgnorePattern": "^[A-Z_]",
            },
          ],
          "no-useless-backreference": "error",
          "no-useless-catch": "error",
          "no-useless-escape": "error",
          "no-with": "error",
          "preserve-caught-error": "error",
          "react/exhaustive-deps": "warn",
          "react/only-export-components": [
            "error",
            {
              "allowConstantExport": true,
            },
          ],
          "react/rules-of-hooks": "error",
          "require-yield": "error",
          "use-isnan": "error",
          "valid-typeof": "error",
        },
      },
    ],
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [
      "@eslint-react/component-hook-factories",
      "@eslint-react/error-boundaries",
      "@eslint-react/exhaustive-deps",
      "@eslint-react/no-access-state-in-setstate",
      "@eslint-react/no-array-index-key",
      "@eslint-react/no-children-count",
      "@eslint-react/no-children-for-each",
      "@eslint-react/no-children-map",
      "@eslint-react/no-children-only",
      "@eslint-react/no-children-to-array",
      "@eslint-react/no-clone-element",
      "@eslint-react/no-component-will-mount",
      "@eslint-react/no-component-will-receive-props",
      "@eslint-react/no-component-will-update",
      "@eslint-react/no-context-provider",
      "@eslint-react/no-create-ref",
      "@eslint-react/no-direct-mutation-state",
      "@eslint-react/no-forward-ref",
      "@eslint-react/no-missing-key",
      "@eslint-react/no-nested-component-definitions",
      "@eslint-react/no-nested-lazy-component-declarations",
      "@eslint-react/no-redundant-should-component-update",
      "@eslint-react/no-set-state-in-component-did-mount",
      "@eslint-react/no-set-state-in-component-did-update",
      "@eslint-react/no-set-state-in-component-will-update",
      "@eslint-react/no-unnecessary-use-prefix",
      "@eslint-react/no-unsafe-component-will-mount",
      "@eslint-react/no-unsafe-component-will-receive-props",
      "@eslint-react/no-unsafe-component-will-update",
      "@eslint-react/no-unused-class-component-members",
      "@eslint-react/no-use-context",
      "@eslint-react/purity",
      "@eslint-react/rules-of-hooks",
      "@eslint-react/set-state-in-effect",
      "@eslint-react/set-state-in-render",
      "@eslint-react/unsupported-syntax",
      "@eslint-react/use-memo",
      "@eslint-react/use-state",
      "@eslint-react/jsx-no-children-prop",
      "@eslint-react/jsx-no-children-prop-with-children",
      "@eslint-react/jsx-no-comment-textnodes",
      "@eslint-react/jsx-no-key-after-spread",
      "@eslint-react/jsx-no-leaked-semicolon",
      "@eslint-react/jsx-no-namespace",
      "@eslint-react/rsc-function-definition",
      "@eslint-react/dom-no-dangerously-set-innerhtml",
      "@eslint-react/dom-no-dangerously-set-innerhtml-with-children",
      "@eslint-react/dom-no-find-dom-node",
      "@eslint-react/dom-no-flush-sync",
      "@eslint-react/dom-no-hydrate",
      "@eslint-react/dom-no-render",
      "@eslint-react/dom-no-render-return-value",
      "@eslint-react/dom-no-script-url",
      "@eslint-react/dom-no-unsafe-iframe-sandbox",
      "@eslint-react/dom-no-use-form-state",
      "@eslint-react/dom-no-void-elements-with-children",
      "@eslint-react/web-api-no-leaked-event-listener",
      "@eslint-react/web-api-no-leaked-interval",
      "@eslint-react/web-api-no-leaked-resize-observer",
      "@eslint-react/web-api-no-leaked-timeout",
      "@eslint-react/naming-convention-context-name",
      "@eslint-react/naming-convention-id-name",
      "@eslint-react/naming-convention-ref-name",
    ],
    "not-implemented": [],
    "nursery": [
      "no-undef",
      "no-useless-assignment",
    ],
    "type-aware": [],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [
    "Settings found under a 'files' pattern — oxlint does not support settings in overrides and they will be skipped:
\`react-x\`",
  ],
}
`;

exports[`eslint-react --js-plugins > eslint-react--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "env": {
          "es2020": true,
        },
        "files": [
          "**/*.{js,jsx}",
        ],
        "jsPlugins": [
          "@eslint-react/eslint-plugin",
        ],
        "plugins": [
          "react",
        ],
        "rules": {
          "@eslint-react/component-hook-factories": "error",
          "@eslint-react/dom-no-dangerously-set-innerhtml": "warn",
          "@eslint-react/dom-no-dangerously-set-innerhtml-with-children": "error",
          "@eslint-react/dom-no-find-dom-node": "error",
          "@eslint-react/dom-no-flush-sync": "error",
          "@eslint-react/dom-no-hydrate": "error",
          "@eslint-react/dom-no-render": "error",
          "@eslint-react/dom-no-render-return-value": "error",
          "@eslint-react/dom-no-script-url": "warn",
          "@eslint-react/dom-no-unsafe-iframe-sandbox": "warn",
          "@eslint-react/dom-no-use-form-state": "error",
          "@eslint-react/dom-no-void-elements-with-children": "error",
          "@eslint-react/error-boundaries": "error",
          "@eslint-react/exhaustive-deps": "warn",
          "@eslint-react/jsx-no-children-prop": "warn",
          "@eslint-react/jsx-no-children-prop-with-children": "error",
          "@eslint-react/jsx-no-comment-textnodes": "warn",
          "@eslint-react/jsx-no-key-after-spread": "error",
          "@eslint-react/jsx-no-leaked-semicolon": "warn",
          "@eslint-react/jsx-no-namespace": "error",
          "@eslint-react/naming-convention-context-name": "warn",
          "@eslint-react/naming-convention-id-name": "warn",
          "@eslint-react/naming-convention-ref-name": "warn",
          "@eslint-react/no-access-state-in-setstate": "error",
          "@eslint-react/no-array-index-key": "warn",
          "@eslint-react/no-children-count": "warn",
          "@eslint-react/no-children-for-each": "warn",
          "@eslint-react/no-children-map": "warn",
          "@eslint-react/no-children-only": "warn",
          "@eslint-react/no-children-to-array": "warn",
          "@eslint-react/no-clone-element": "warn",
          "@eslint-react/no-component-will-mount": "error",
          "@eslint-react/no-component-will-receive-props": "error",
          "@eslint-react/no-component-will-update": "error",
          "@eslint-react/no-context-provider": "warn",
          "@eslint-react/no-create-ref": "error",
          "@eslint-react/no-direct-mutation-state": "error",
          "@eslint-react/no-forward-ref": "warn",
          "@eslint-react/no-missing-key": "error",
          "@eslint-react/no-nested-component-definitions": "error",
          "@eslint-react/no-nested-lazy-component-declarations": "error",
          "@eslint-react/no-redundant-should-component-update": "error",
          "@eslint-react/no-set-state-in-component-did-mount": "warn",
          "@eslint-react/no-set-state-in-component-did-update": "warn",
          "@eslint-react/no-set-state-in-component-will-update": "warn",
          "@eslint-react/no-unnecessary-use-prefix": "warn",
          "@eslint-react/no-unsafe-component-will-mount": "warn",
          "@eslint-react/no-unsafe-component-will-receive-props": "warn",
          "@eslint-react/no-unsafe-component-will-update": "warn",
          "@eslint-react/no-unused-class-component-members": "warn",
          "@eslint-react/no-use-context": "warn",
          "@eslint-react/purity": "warn",
          "@eslint-react/rsc-function-definition": "error",
          "@eslint-react/rules-of-hooks": "error",
          "@eslint-react/set-state-in-effect": "warn",
          "@eslint-react/set-state-in-render": "error",
          "@eslint-react/unsupported-syntax": "error",
          "@eslint-react/use-memo": "error",
          "@eslint-react/use-state": "warn",
          "@eslint-react/web-api-no-leaked-event-listener": "warn",
          "@eslint-react/web-api-no-leaked-interval": "warn",
          "@eslint-react/web-api-no-leaked-resize-observer": "warn",
          "@eslint-react/web-api-no-leaked-timeout": "warn",
          "constructor-super": "error",
          "for-direction": "error",
          "getter-return": "error",
          "no-async-promise-executor": "error",
          "no-case-declarations": "error",
          "no-class-assign": "error",
          "no-compare-neg-zero": "error",
          "no-cond-assign": "error",
          "no-const-assign": "error",
          "no-constant-binary-expression": "error",
          "no-constant-condition": "error",
          "no-control-regex": "error",
          "no-debugger": "error",
          "no-delete-var": "error",
          "no-dupe-class-members": "error",
          "no-dupe-else-if": "error",
          "no-dupe-keys": "error",
          "no-duplicate-case": "error",
          "no-empty": "error",
          "no-empty-character-class": "error",
          "no-empty-pattern": "error",
          "no-empty-static-block": "error",
          "no-ex-assign": "error",
          "no-extra-boolean-cast": "error",
          "no-fallthrough": "error",
          "no-func-assign": "error",
          "no-global-assign": "error",
          "no-import-assign": "error",
          "no-invalid-regexp": "error",
          "no-irregular-whitespace": "error",
          "no-loss-of-precision": "error",
          "no-misleading-character-class": "error",
          "no-new-native-nonconstructor": "error",
          "no-nonoctal-decimal-escape": "error",
          "no-obj-calls": "error",
          "no-prototype-builtins": "error",
          "no-redeclare": "error",
          "no-regex-spaces": "error",
          "no-self-assign": "error",
          "no-setter-return": "error",
          "no-shadow-restricted-names": "error",
          "no-sparse-arrays": "error",
          "no-this-before-super": "error",
          "no-unassigned-vars": "error",
          "no-unexpected-multiline": "error",
          "no-unreachable": "error",
          "no-unsafe-finally": "error",
          "no-unsafe-negation": "error",
          "no-unsafe-optional-chaining": "error",
          "no-unused-labels": "error",
          "no-unused-private-class-members": "error",
          "no-unused-vars": [
            "error",
            {
              "varsIgnorePattern": "^[A-Z_]",
            },
          ],
          "no-useless-backreference": "error",
          "no-useless-catch": "error",
          "no-useless-escape": "error",
          "no-with": "error",
          "preserve-caught-error": "error",
          "react/exhaustive-deps": "warn",
          "react/only-export-components": [
            "error",
            {
              "allowConstantExport": true,
            },
          ],
          "react/rules-of-hooks": "error",
          "require-yield": "error",
          "use-isnan": "error",
          "valid-typeof": "error",
        },
      },
    ],
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [],
    "nursery": [
      "no-undef",
      "no-useless-assignment",
    ],
    "type-aware": [],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [
    "Settings found under a 'files' pattern — oxlint does not support settings in overrides and they will be skipped:
\`react-x\`",
  ],
}
`;

exports[`eslint-react --type-aware > eslint-react--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "env": {
          "es2020": true,
        },
        "files": [
          "**/*.{js,jsx}",
        ],
        "plugins": [
          "react",
        ],
        "rules": {
          "constructor-super": "error",
          "for-direction": "error",
          "getter-return": "error",
          "no-async-promise-executor": "error",
          "no-case-declarations": "error",
          "no-class-assign": "error",
          "no-compare-neg-zero": "error",
          "no-cond-assign": "error",
          "no-const-assign": "error",
          "no-constant-binary-expression": "error",
          "no-constant-condition": "error",
          "no-control-regex": "error",
          "no-debugger": "error",
          "no-delete-var": "error",
          "no-dupe-class-members": "error",
          "no-dupe-else-if": "error",
          "no-dupe-keys": "error",
          "no-duplicate-case": "error",
          "no-empty": "error",
          "no-empty-character-class": "error",
          "no-empty-pattern": "error",
          "no-empty-static-block": "error",
          "no-ex-assign": "error",
          "no-extra-boolean-cast": "error",
          "no-fallthrough": "error",
          "no-func-assign": "error",
          "no-global-assign": "error",
          "no-import-assign": "error",
          "no-invalid-regexp": "error",
          "no-irregular-whitespace": "error",
          "no-loss-of-precision": "error",
          "no-misleading-character-class": "error",
          "no-new-native-nonconstructor": "error",
          "no-nonoctal-decimal-escape": "error",
          "no-obj-calls": "error",
          "no-prototype-builtins": "error",
          "no-redeclare": "error",
          "no-regex-spaces": "error",
          "no-self-assign": "error",
          "no-setter-return": "error",
          "no-shadow-restricted-names": "error",
          "no-sparse-arrays": "error",
          "no-this-before-super": "error",
          "no-unassigned-vars": "error",
          "no-unexpected-multiline": "error",
          "no-unreachable": "error",
          "no-unsafe-finally": "error",
          "no-unsafe-negation": "error",
          "no-unsafe-optional-chaining": "error",
          "no-unused-labels": "error",
          "no-unused-private-class-members": "error",
          "no-unused-vars": [
            "error",
            {
              "varsIgnorePattern": "^[A-Z_]",
            },
          ],
          "no-useless-backreference": "error",
          "no-useless-catch": "error",
          "no-useless-escape": "error",
          "no-with": "error",
          "preserve-caught-error": "error",
          "react/exhaustive-deps": "warn",
          "react/only-export-components": [
            "error",
            {
              "allowConstantExport": true,
            },
          ],
          "react/rules-of-hooks": "error",
          "require-yield": "error",
          "use-isnan": "error",
          "valid-typeof": "error",
        },
      },
    ],
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [
      "@eslint-react/component-hook-factories",
      "@eslint-react/error-boundaries",
      "@eslint-react/exhaustive-deps",
      "@eslint-react/no-access-state-in-setstate",
      "@eslint-react/no-array-index-key",
      "@eslint-react/no-children-count",
      "@eslint-react/no-children-for-each",
      "@eslint-react/no-children-map",
      "@eslint-react/no-children-only",
      "@eslint-react/no-children-to-array",
      "@eslint-react/no-clone-element",
      "@eslint-react/no-component-will-mount",
      "@eslint-react/no-component-will-receive-props",
      "@eslint-react/no-component-will-update",
      "@eslint-react/no-context-provider",
      "@eslint-react/no-create-ref",
      "@eslint-react/no-direct-mutation-state",
      "@eslint-react/no-forward-ref",
      "@eslint-react/no-missing-key",
      "@eslint-react/no-nested-component-definitions",
      "@eslint-react/no-nested-lazy-component-declarations",
      "@eslint-react/no-redundant-should-component-update",
      "@eslint-react/no-set-state-in-component-did-mount",
      "@eslint-react/no-set-state-in-component-did-update",
      "@eslint-react/no-set-state-in-component-will-update",
      "@eslint-react/no-unnecessary-use-prefix",
      "@eslint-react/no-unsafe-component-will-mount",
      "@eslint-react/no-unsafe-component-will-receive-props",
      "@eslint-react/no-unsafe-component-will-update",
      "@eslint-react/no-unused-class-component-members",
      "@eslint-react/no-use-context",
      "@eslint-react/purity",
      "@eslint-react/rules-of-hooks",
      "@eslint-react/set-state-in-effect",
      "@eslint-react/set-state-in-render",
      "@eslint-react/unsupported-syntax",
      "@eslint-react/use-memo",
      "@eslint-react/use-state",
      "@eslint-react/jsx-no-children-prop",
      "@eslint-react/jsx-no-children-prop-with-children",
      "@eslint-react/jsx-no-comment-textnodes",
      "@eslint-react/jsx-no-key-after-spread",
      "@eslint-react/jsx-no-leaked-semicolon",
      "@eslint-react/jsx-no-namespace",
      "@eslint-react/rsc-function-definition",
      "@eslint-react/dom-no-dangerously-set-innerhtml",
      "@eslint-react/dom-no-dangerously-set-innerhtml-with-children",
      "@eslint-react/dom-no-find-dom-node",
      "@eslint-react/dom-no-flush-sync",
      "@eslint-react/dom-no-hydrate",
      "@eslint-react/dom-no-render",
      "@eslint-react/dom-no-render-return-value",
      "@eslint-react/dom-no-script-url",
      "@eslint-react/dom-no-unsafe-iframe-sandbox",
      "@eslint-react/dom-no-use-form-state",
      "@eslint-react/dom-no-void-elements-with-children",
      "@eslint-react/web-api-no-leaked-event-listener",
      "@eslint-react/web-api-no-leaked-interval",
      "@eslint-react/web-api-no-leaked-resize-observer",
      "@eslint-react/web-api-no-leaked-timeout",
      "@eslint-react/naming-convention-context-name",
      "@eslint-react/naming-convention-id-name",
      "@eslint-react/naming-convention-ref-name",
    ],
    "not-implemented": [],
    "nursery": [
      "no-undef",
      "no-useless-assignment",
    ],
    "type-aware": [],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [
    "Settings found under a 'files' pattern — oxlint does not support settings in overrides and they will be skipped:
\`react-x\`",
  ],
}
`;

exports[`eslint-react merge > eslint-react--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
    },
    "overrides": [
      {
        "env": {
          "es2020": true,
        },
        "files": [
          "**/*.{js,jsx}",
        ],
        "plugins": [
          "react",
        ],
        "rules": {
          "constructor-super": "error",
          "for-direction": "error",
          "getter-return": "error",
          "no-async-promise-executor": "error",
          "no-case-declarations": "error",
          "no-class-assign": "error",
          "no-compare-neg-zero": "error",
          "no-cond-assign": "error",
          "no-const-assign": "error",
          "no-constant-binary-expression": "error",
          "no-constant-condition": "error",
          "no-control-regex": "error",
          "no-debugger": "error",
          "no-delete-var": "error",
          "no-dupe-class-members": "error",
          "no-dupe-else-if": "error",
          "no-dupe-keys": "error",
          "no-duplicate-case": "error",
          "no-empty": "error",
          "no-empty-character-class": "error",
          "no-empty-pattern": "error",
          "no-empty-static-block": "error",
          "no-ex-assign": "error",
          "no-extra-boolean-cast": "error",
          "no-fallthrough": "error",
          "no-func-assign": "error",
          "no-global-assign": "error",
          "no-import-assign": "error",
          "no-invalid-regexp": "error",
          "no-irregular-whitespace": "error",
          "no-loss-of-precision": "error",
          "no-misleading-character-class": "error",
          "no-new-native-nonconstructor": "error",
          "no-nonoctal-decimal-escape": "error",
          "no-obj-calls": "error",
          "no-prototype-builtins": "error",
          "no-redeclare": "error",
          "no-regex-spaces": "error",
          "no-self-assign": "error",
          "no-setter-return": "error",
          "no-shadow-restricted-names": "error",
          "no-sparse-arrays": "error",
          "no-this-before-super": "error",
          "no-unassigned-vars": "error",
          "no-unexpected-multiline": "error",
          "no-unreachable": "error",
          "no-unsafe-finally": "error",
          "no-unsafe-negation": "error",
          "no-unsafe-optional-chaining": "error",
          "no-unused-labels": "error",
          "no-unused-private-class-members": "error",
          "no-unused-vars": [
            "error",
            {
              "varsIgnorePattern": "^[A-Z_]",
            },
          ],
          "no-useless-backreference": "error",
          "no-useless-catch": "error",
          "no-useless-escape": "error",
          "no-with": "error",
          "preserve-caught-error": "error",
          "react/exhaustive-deps": "warn",
          "react/only-export-components": [
            "error",
            {
              "allowConstantExport": true,
            },
          ],
          "react/rules-of-hooks": "error",
          "require-yield": "error",
          "use-isnan": "error",
          "valid-typeof": "error",
        },
      },
    ],
  },
  "skipped": {
    "js-plugins": [
      "@eslint-react/component-hook-factories",
      "@eslint-react/error-boundaries",
      "@eslint-react/exhaustive-deps",
      "@eslint-react/no-access-state-in-setstate",
      "@eslint-react/no-array-index-key",
      "@eslint-react/no-children-count",
      "@eslint-react/no-children-for-each",
      "@eslint-react/no-children-map",
      "@eslint-react/no-children-only",
      "@eslint-react/no-children-to-array",
      "@eslint-react/no-clone-element",
      "@eslint-react/no-component-will-mount",
      "@eslint-react/no-component-will-receive-props",
      "@eslint-react/no-component-will-update",
      "@eslint-react/no-context-provider",
      "@eslint-react/no-create-ref",
      "@eslint-react/no-direct-mutation-state",
      "@eslint-react/no-forward-ref",
      "@eslint-react/no-missing-key",
      "@eslint-react/no-nested-component-definitions",
      "@eslint-react/no-nested-lazy-component-declarations",
      "@eslint-react/no-redundant-should-component-update",
      "@eslint-react/no-set-state-in-component-did-mount",
      "@eslint-react/no-set-state-in-component-did-update",
      "@eslint-react/no-set-state-in-component-will-update",
      "@eslint-react/no-unnecessary-use-prefix",
      "@eslint-react/no-unsafe-component-will-mount",
      "@eslint-react/no-unsafe-component-will-receive-props",
      "@eslint-react/no-unsafe-component-will-update",
      "@eslint-react/no-unused-class-component-members",
      "@eslint-react/no-use-context",
      "@eslint-react/purity",
      "@eslint-react/rules-of-hooks",
      "@eslint-react/set-state-in-effect",
      "@eslint-react/set-state-in-render",
      "@eslint-react/unsupported-syntax",
      "@eslint-react/use-memo",
      "@eslint-react/use-state",
      "@eslint-react/jsx-no-children-prop",
      "@eslint-react/jsx-no-children-prop-with-children",
      "@eslint-react/jsx-no-comment-textnodes",
      "@eslint-react/jsx-no-key-after-spread",
      "@eslint-react/jsx-no-leaked-semicolon",
      "@eslint-react/jsx-no-namespace",
      "@eslint-react/rsc-function-definition",
      "@eslint-react/dom-no-dangerously-set-innerhtml",
      "@eslint-react/dom-no-dangerously-set-innerhtml-with-children",
      "@eslint-react/dom-no-find-dom-node",
      "@eslint-react/dom-no-flush-sync",
      "@eslint-react/dom-no-hydrate",
      "@eslint-react/dom-no-render",
      "@eslint-react/dom-no-render-return-value",
      "@eslint-react/dom-no-script-url",
      "@eslint-react/dom-no-unsafe-iframe-sandbox",
      "@eslint-react/dom-no-use-form-state",
      "@eslint-react/dom-no-void-elements-with-children",
      "@eslint-react/web-api-no-leaked-event-listener",
      "@eslint-react/web-api-no-leaked-interval",
      "@eslint-react/web-api-no-leaked-resize-observer",
      "@eslint-react/web-api-no-leaked-timeout",
      "@eslint-react/naming-convention-context-name",
      "@eslint-react/naming-convention-id-name",
      "@eslint-react/naming-convention-ref-name",
    ],
    "not-implemented": [],
    "nursery": [
      "no-undef",
      "no-useless-assignment",
    ],
    "type-aware": [],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
      "react-hooks/static-components",
      "react-hooks/use-memo",
      "react-hooks/preserve-manual-memoization",
      "react-hooks/incompatible-library",
      "react-hooks/immutability",
      "react-hooks/globals",
      "react-hooks/refs",
      "react-hooks/set-state-in-effect",
      "react-hooks/error-boundaries",
      "react-hooks/purity",
      "react-hooks/set-state-in-render",
      "react-hooks/unsupported-syntax",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [
    "Settings found under a 'files' pattern — oxlint does not support settings in overrides and they will be skipped:
\`react-x\`",
  ],
}
`;
